--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,80 @@
-theme: jekyll-theme-minimal
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you: 
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+title: Daniel Kocher 
+email: dkocher@cs.uni-salzburg.at
+description: >- # this means to ignore newlines until "baseurl:"
+  <p>
+  Postdoc Researcher<br />
+  Computational Systems Group
+  </p>
+
+  <p>
+  <strong>Contact:</strong><br />
+  <a href="https://www.plus.ac.at/fachbereich-computerwissenschaften/">Department of Computer Sciences</a><br />
+  <a href="https://www.plus.ac.at">University of Salzburg</a><br />
+  Jakob-Haringer-Strasse 2<br />
+  5020 Salzburg, Austria
+  </p>
+
+  <p>
+  <strong>Email:</strong><br />
+  <small>dkocher <em>at</em> cs <em>dot</em> sbg <em>dot</em> ac <em>dot</em> at</small><br />
+  <small>dkocher <em>at</em> cs <em>dot</em> uni-salzburg <em>dot</em> at</small>
+  </p>
+  
+  <p><strong>
+  <a href="/publications/">Publications</a><br /><br />
+  <a href="/personal/">Personal</a>
+  </strong></p>
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  danielkocher
+github:
+  is_project_page: false
+  is_user_page: true
+
+logo: img/daniel_kocher.jpg
+
+# Build settings
+theme: jekyll-theme-minimal 
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
