--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,15 @@ title: Daniel Kocher
 email: dkocher@cs.uni-salzburg.at
 description: >- # this means to ignore newlines until "baseurl:"
   <p>
-  Postdoc Researcher<br />
+  Postdoctoral Researcher<br />
   Computational Systems Group
   </p>
 
   <p>
   <strong>Contact:</strong><br />
-  <a href="https://www.plus.ac.at/fachbereich-computerwissenschaften/">Department of Computer Sciences</a><br />
-  <a href="https://www.plus.ac.at">University of Salzburg</a><br />
+  <a href="https://www.plus.ac.at/computer-science/?lang=en">Department of Computer Science</a><br />
+  <a href="https://www.plus.ac.at/digital-and-analytical-sciences/?lang=en">Faculty of Digital and Analytical Sciences</a><br />
+  <a href="https://www.plus.ac.at/?lang=en">University of Salzburg</a><br />
   Jakob-Haringer-Strasse 2<br />
   5020 Salzburg, Austria
   </p>
