Fix: Spacing between nav items

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   </p>
   
   <p><strong>
-  <a href="/publications/">Publications</a><br /><br />
+  <a href="/publications/">Publications</a><br />
   <a href="/teaching/">Teaching</a><br />
   <a href="/personal/">Personal</a>
   </strong></p>
