--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   <p><strong>
   <a href="/publications/">Publications</a><br />
   <a href="/teaching/">Teaching</a><br />
+  <a href="/community-service/">Community Service</a><br />
   <a href="/personal/">Personal</a>
   </strong></p>
 baseurl: "" # the subpath of your site, e.g. /blog
