--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,11 @@ title: Daniel Kocher
 email: dkocher@cs.uni-salzburg.at
 description: >- # this means to ignore newlines until "baseurl:"
   <p>
+  <strong>Affiliations:</strong><br />
+  Senior Scientist<br />
+  <a href="https://dbresearch.uni-salzburg.at">Database Research Group</a><br /><br />
   Postdoctoral Researcher<br />
-  Computational Systems Group
+  <a href="https://younghope.at/en/">young.hope Research Centre for Rare and Complex Diseases among Children</a>
   </p>
 
   <p>
